<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".view.CadastroCategoria">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/categorias"
                android:textSize="30dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bolos" />

            <CheckBox
                android:id="@+id/checkDoce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Doces" />

            <CheckBox
                android:id="@+id/checkCarne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Carnes" />

            <CheckBox
                android:id="@+id/checkPeixe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Peixes" />


            <CheckBox
                android:id="@+id/checkSopa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sopas" />

            <CheckBox
                android:id="@+id/checkMassa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Massas" />

            <CheckBox
                android:id="@+id/checkBebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bebidas" />

            <CheckBox
                android:id="@+id/checkOutros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Outros" />

            <Button
                android:id="@+id/btnCadastroCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:icon="@drawable/ic_baseline_add_task_24"
                android:text="@string/Salvar" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>